@@ -5,6 +5,7 @@ x.x:
 - added: group_forum_topics widget from widget manager
 - added: group_news widget from widget manager
 - added: index_groups widget from widget manager
+- added: group sidebar cleanup feature
 - removed: index_discussions widget
 - fixed: depricated notice in invitations overview
 - fixed: url error in invitation
